updates inference notebook

--- a/pix2pix_inference.ipynb
+++ b/pix2pix_inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,7 @@
    "outputs": [],
    "source": [
     "validation_path = '/home/ubuntu/pix2pix_data'\n",
+    "path = \"/home/ubuntu/pix2pix_tf/gen_weights/\"\n",
     "\n",
     "val_gen = DataGenerator(\n",
     "    mode=\"valid\",\n",
@@ -38,7 +39,7 @@
     "val_dataset = val_dataset.batch(1)\n",
     "val_dataset = val_dataset.repeat()\n",
     "\n",
-    "model = PIX2PIX()"
+    "model = PIX2PIX(weights = path)"
    ]
   },
   {
@@ -47,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test_show_image(dataset, model, test_image_height=512,test_image_width=512):\n",
+    "def test_show_image(dataset, model, test_image_height=1024,test_image_width=1024):\n",
     "    for images in dataset.take(1):\n",
     "        for i in range(1):\n",
     "            gray_image = images[0][i]\n",
